name:    firrtl
version: 0.0.2.0

category: Language, Hardware, Embedded

synopsis: FIRRTL preprocessor, parser, and AST.

description: FIRRTL preprocessor, parser and AST

author:     Andreas Westerwick <westerwick@pconas.de>
maintainer: Andreas Westerwick <westerwick@pconas.de>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/foshardware/firrtl

build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  build-tools:
    alex,
    happy
  build-depends:
    base,
    array,
    text

  exposed-modules:
    Language.FIRRTL.Lexer
    Language.FIRRTL.Syntax
    Language.FIRRTL.Tokens
    Language.FIRRTL.Parser

  ghc-options: -W -O2

source-repository head
  type:     git
  location: git://github.com/foshardware/firrtl.git

