name:    firrtl
version: 0.0.2.0

category: Language, Hardware, Embedded

synopsis: FIRRTL preprocessor, parser, and AST.

description: FIRRTL preprocessor, parser and AST

author:     Andreas Westerwick <westerwick@pconas.de>
maintainer: Andreas Westerwick <westerwick@pconas.de>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/foshardware/firrtl

build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  build-tools:
    alex,
    happy
  build-depends:
    base,
    array,
    parsec,
    parsec-numbers,
    text

  hs-source-dirs:
      src
  exposed-modules:
    Language.FIRRTL.Lexer
    Language.FIRRTL.Syntax
    Language.FIRRTL.Tokens
    Language.FIRRTL.Parser

  ghc-options: -W -O2

test-suite firrtl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_firrtl
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.2
                     , firrtl
                     , array
                     , text
                     , file-embed
                     , tasty
                     , tasty-hunit
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/foshardware/firrtl.git


